# TryDJIOnboardinQt

tryDJI/: CMakeLists.txt  CMakeLists.txt~  CTimer.cpp  CTimer.h  DJI_Pro_App.cpp  SmoothControl.cpp  SmoothControl.h  Transmission.cpp  Transmission.h  main.cpp  main.h
tryDJI/DJI_LIB/: CMakeLists.txt  DJI_Pro_App.h
tryDJI/OpenCV_LIB/: CMakeLists.txt  MarkerDetector.cpp  MarkerDetector.hpp
